Edits to case study paper coho chapter

--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -446,7 +446,7 @@
 
 @article{holtbyConservationUnitsPacific2007,
   title = {Conservation {{Units}} for {{Pacific Salmon}} under the {{Wild Salmon Policy}}},
-  author = {Holtby, L. Blair and Ciruna, Kristine  A.},
+  author = {Holtby, L. Blair and Ciruna, Kristine A.},
   year = {2007},
   journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2007/070},
@@ -733,6 +733,16 @@
   institution = {{Alaska Department of Fish and Game}},
   langid = {english},
   file = {C\:\\Users\\holtk\\Zotero\\storage\\H9WTQHBJ\\Otis and Hasbrouk - 2004 - Escapement goals for salmon stocks in Lower Cook I.pdf}
+}
+
+@article{pacificsalmoncommissionJointCohoTechnical2013,
+  title = {Joint {{Coho Technical Committee}} 1986-2009 {{Periodic Report}} (Revised).},
+  author = {{Pacific Salmon Commission}},
+  year = {2013},
+  journal = {REPORT TCCOHO (13)\textendash 1},
+  pages = {174 p},
+  langid = {english},
+  file = {C\:\\Users\\holtk\\Zotero\\storage\\X6C465PM\\Tompkins et al. - MEMBERSHIP OF THE JOINT COHO TECHNICAL COMMITTEE.pdf}
 }
 
 @article{pacificsalmoncommissionPacificSalmonCommission2018,
