--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -61,7 +61,7 @@ Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) led to a conse
 
 ### History of aggregate-abundance based reference points
 
-Interior Fraser Coho show a strong positive relationship between their spatial distribution and overall abundance, which has been used as a basis for identifying aggregate abundance-based recovery targets and reference points for the stock group. Starting in 2006, the IFCRT identified a recovery goal of one or more viable sub-populations in each of the five 'populations', where their definition of populations aligns with CUs under the WSP [@ifcrtConservationStrategyCoho2006]. Note that from this point on, we use the term CU instead of population when describing IFCRT recovery goals to be consistent with the WSP. The IFCRT identified a short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs was to exceed 1,000 wild-origin spawning Coho Salmon, excluding hatchery fish spawning in the wild. Based on analysis of the relationship between aggregate abundance and the number of CUs that met this objective based on historical data, the IFCRT identified an abundance-based short-term recovery target of 20,000 spawners as the level required to meet their distributional objective. In addition, the IFCRT identified a long-term recovery target of 40,000 spawners, which represented a level that was expected to maintain 1,000 or more wild Coho Salmon in all 11 sub-populations. @deckerAssessmentInteriorFraser2014 updated the IFCRT's original analysis using a longer time series of escapement data. They also quantified the relationship between aggregate abundance and distribution by using a logistic regression to estimate the probability of meeting short-term and long-term recovery objectives as a function of aggregate abundance. They concluded that aggregate spawner abundance levels of 20,000 and 40,000 spawners would result in near 100% probability that the IFCRT’s short-term objective and long-term recovery objectives would be met, respectively. @kormanEvaluationFrameworkAssessing2019 also used logistic regressions of the relationship between the IFCRT's distributional objectives and aggregate abundance when evaluating how exploitation and marine survival rates affected the ability of Interior Fraser Coho to meet conservation targets. Their approach was similar to that of @deckerAssessmentInteriorFraser2014, except they applied logistic regressions at the CU-level instead of the SMU-level. Using this approach, they calculated the probability that IFCRT sub-population objectives were met as a function of total escapement to the CU within their simulation evaluation. When evaluating how well conservation targets were met at the SMU-level, they chose to rely on the previous values of 20,000 and 40,000 identified by the IFCRT instead of updating these values. Finally, the 2018 RPA used an updated logistic regression to identify a long-term recovery target for Interior Fraser Coho that met the long-term IFCRT objective of 1000 spawners in all sub-populations [@arbeiderInteriorFraserCoho2020]. As a result, @arbeiderInteriorFraserCoho2020 recommended that the long-term recovery target for the stock should be a 3-year geometric mean abundance of 35,935 natural-origin spawners.  
+Interior Fraser Coho show a strong positive relationship between their spatial distribution and overall abundance, which has been used as a basis for identifying aggregate abundance-based recovery targets and reference points for the stock group. Starting in 2006, the IFCRT identified a recovery goal of one or more viable sub-populations in each of the five 'populations', where their definition of populations aligns with CUs under the WSP [@ifcrtConservationStrategyCoho2006]. Note that from this point on, we use the term CU instead of population when describing IFCRT recovery goals to be consistent with the WSP. The IFCRT identified a short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs was to exceed 1,000 wild-origin spawning Coho Salmon, excluding hatchery fish spawning in the wild. Based on analysis of the relationship between aggregate abundance and the number of CUs that met this objective based on historical data, the IFCRT identified an abundance-based short-term recovery target of 20,000 spawners as the level required to meet their distributional objective. In addition, the IFCRT identified a long-term recovery target of 40,000 spawners, which represented a level that was expected to maintain 1,000 or more wild Coho Salmon in all 11 sub-populations. @deckerAssessmentInteriorFraser2014 updated the IFCRT's original analysis using a longer time series of escapement data. They also quantified the relationship between aggregate abundance and distribution by using a logistic regression to estimate the probability of meeting short-term and long-term recovery objectives as a function of aggregate abundance. They concluded that aggregate spawner abundance levels of 20,000 and 40,000 spawners would result in near 100% probability that the IFCRT’s short-term objective and long-term recovery objectives would be met, respectively. @kormanEvaluationFrameworkAssessing2019 also used logistic regressions of the relationship between the IFCRT's distributional objectives and aggregate abundance when evaluating how exploitation and smolt-to-adult survival rates affected the ability of Interior Fraser Coho to meet conservation targets. Their approach was similar to that of @deckerAssessmentInteriorFraser2014, except they applied logistic regressions at the CU-level instead of the SMU-level. Using this approach, they calculated the probability that IFCRT sub-population objectives were met as a function of total escapement to the CU within their simulation evaluation. When evaluating how well conservation targets were met at the SMU-level, they chose to rely on the previous values of 20,000 and 40,000 identified by the IFCRT instead of updating these values. Finally, the 2018 RPA used an updated logistic regression to identify a long-term recovery target for Interior Fraser Coho that met the long-term IFCRT objective of 1000 spawners in all sub-populations [@arbeiderInteriorFraserCoho2020]. As a result, @arbeiderInteriorFraserCoho2020 recommended that the long-term recovery target for the stock should be a 3-year geometric mean abundance of 35,935 natural-origin spawners.  
 
 
 
@@ -304,7 +304,7 @@ When CU status was based on the IFCRT distributional target, the fit of the logi
 
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption (Table \@ref(tab:logisticDiagIFC2020)). An examination of deviance residuals did not show any large outliers, i.e., no residual values were greater than 2 standard deviations for all three models. Observations were also found to be independent at all year lags examined for all three models. 
+Logistic regression diagnostics showed that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption (Table \@ref(tab:logisticDiagIFC2020)). An examination of deviance residuals did not show any large outliers, i.e., no residual values were greater than 2 standard deviations away from zero for all three models. Observations were also found to be independent at all year lags examined for all three models based on no significant autocorrelations among residuals. 
 
 The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Pseudo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results<!--result?--> was especially true for the Logistic:Sgen-Ricker and Logistic:Sgen-priorCap model which had hit ratios ranging between 0.83 and 0.87 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 
@@ -364,7 +364,7 @@ knitr::include_graphics("figure/coho-StatusByNCUs-IndivRickerSurvCap-50.png")
 \linebreak
 
 
-LRPs based on the Logistic:IFCRT model could be estimated for all four-CU data scenarios in all years (Figure \@ref(fig:coho-distributional-missingCUs)). Resulting estimates of SMU status were similar to the full data estimate for four of the five CU combinations. Status estimates were highest and most uncertain when the South Thompson CU was dropped from the analysis (i.e., the last of the five four-CU combinations shown for each year in Figure \@ref(fig:coho-distributional-missingCUs)). This pattern is due the 2015 data point for the South Thompson CU, which is an influential observation that has a large impact on the shape of the fit model. The South Thompson CU fails to meet the IFCRT distributional target in 2015. Because it is the only CU that misses the target in 2015, its removal leads to <!--missing 'a' ?-->'failure' year (i.e., at least one CU below its lower benchmark) becoming a 'success' (all CUs above lower benchmark). This shift results in a lower LRP and a higher status estimate. For missing data scenarios in which only three CUs were included, status estimates often had higher uncertainty than the four-CU or full data scenarios, and showed high variability among scenarios in estimated status.  
+LRPs based on the Logistic:IFCRT model could be estimated for all four-CU data scenarios in all years (Figure \@ref(fig:coho-distributional-missingCUs)). Resulting estimates of SMU status were similar to the full data estimate for four of the five CU combinations. Status estimates were highest and most uncertain when the South Thompson CU was dropped from the analysis (i.e., the last of the five four-CU combinations shown for each year in Figure \@ref(fig:coho-distributional-missingCUs)). This pattern is due the 2015 data point for the South Thompson CU, which is an influential observation that has a large impact on the shape of the fit model. The South Thompson CU is the only CU that failed to meet the distributional target in 2015, which meant that its removal leads to a 'failure' year (i.e., at least one CU below its lower benchmark) becoming a 'success' (all CUs above lower benchmark). This shift results in a lower LRP and a higher status estimate. For missing data scenarios in which only three CUs were included, status estimates often had higher uncertainty than the four-CU or full data scenarios, and showed high variability among scenarios in estimated status.  
 
 
 ```{r coho-distributional-missingCUs, fig.cap="Retrospective estimates of aggregate status (with 95\\% confidence intervals) from the Logistic:IFCRT model under different scenarios about missing CUs, where status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. The set of status estimates associated with each number of CUs on the x-axis represents all possible combinations of CUs created by selecting that number from the 5 available CUs. Red dashed lines show the maximum likelihood estimate when no data is missing (i.e., all 5 CUs) for comparison with the missing data scenarios. Note that the y-axis has been truncated at 8, so the upper limits of some error bars are not shown.", warning=FALSE, echo=FALSE, out.width = '70%',  fig.align="center"}
@@ -376,22 +376,22 @@ knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 
 ### Methods
 
-Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruit data series were not available at this scale. As a result, projection-based LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~<!--there is a mix of S~gen~, S~gen~, and Sgen (mainly captions). Not sure what we decided on for consistency-->. Parameters characterizing CU-level population dynamics, marine survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
+Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruitment data series were not available at this scale. As a result, projection-based LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~<!--there is a mix of S~gen~, S~gen~, and Sgen (mainly captions). Not sure what we decided on for consistency-->. Parameters characterizing CU-level population dynamics, smolt-to-adult survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
 
 Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  Simulated trajectories were near equilibrium after 4 years of projections during which trajectories depended primarily on the historical time-series (Figures \@ref(fig:coho-CUProjections-Ricker) and \@ref(fig:coho-CUProjections-Ricker-priorCap)).
 
 
 ***Stock recruitment dynamics***  
 
-Stock recruitment parameters for all five CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using tmbStan <!--`samSim` has quotes, does this need them too as a package?-->[@kristensenTMBAutomaticDifferentiation2016], which is an R package that allows MCMC samples to be drawn from a TMB model object using rStan<!--`samSim` has quotes, does this need them too as a package?--> [@standevelopmentteamRStanInterfaceStan2020]. Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of $\hat{R}$<!-- replaced Rhat with math notation--> and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
+Stock recruitment parameters for all five CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using 'tmbStan' [@kristensenTMBAutomaticDifferentiation2016], which is an R package that allows MCMC samples to be drawn from a TMB model object using 'rStan' [@standevelopmentteamRStanInterfaceStan2020]. Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of $\hat{R}$ and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
 
 The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we compare against each other. We also considered a simple model-averaging approach, in which we equally weighted the two stock recruit models by combining projections prior to calculating a projection-based LRP as a demonstration of model averaging. Additional sensitivity analyses described below were only done using the base Ricker model.  
 
 ***Covariance in recruitment residuals***
 
-We parameterized correlations in recruitment residuals among CUs from MLE predictions of pairwise correlations from stock recruit model fits. The correlation matrix from the base Ricker model fit is shown in Figure \@ref(fig:coho-recruitResid-Ricker). Correlation values for the Ricker_priorCap model were similar (not shown).    
+We parameterized correlations in recruitment residuals among CUs from MLE predictions of pairwise correlations from stock recruitment model fits. The correlation matrix from the base Ricker model fit is shown in Figure \@ref(fig:coho-recruitResid-Ricker). Correlation values for the Ricker_priorCap model were similar (not shown).    
 
-We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared marine rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in marine survival coefficients among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(WCVIchinookChapter)).  
+We initially attempted to reduce covariation in spawner abundances among CUs by scaling correlations in recruitment residuals (i.e., scalar < 1). However, we found that scalars had little effect on projected correlations in spawner abundances among CUs due to the shared smolt-to-adult survival rate coefficient dominating among-CU variability in recruitment. We therefore used sensitivity analyses of the level of variability in smolt-to-adult survival coefficients among CUs to drive patterns of covariation in spawner abundance, as described below. This approach differs from that taken for WCVI Chinook (Section \@ref(WCVIchinookChapter)).  
 
 
 ```{r coho-recruitResid-Ricker, fig.cap="Bubble plot of pairwise correlation coefficient in recruitment residuals among CUs from base Ricker model fit.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
@@ -399,25 +399,25 @@ knitr::include_graphics("figure/coho-RecuitResidCorrelation-Ricker.png")
 ```
 \linebreak
 
-***Variability in marine survival coefficient among CUs***
+***Variability in smolt-to-adult survival coefficient among CUs***
 
-When fitting stock recruit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same marine survival rate for given sea-entry year, and that the marine survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single marine survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
+When fitting stock recruit models to data, we followed the approach of @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 in assuming that all CUs experienced the same smolt-to-adult survival rate for given sea-entry year, and that the smolt-to-adult survival coefficient, $\gamma$, was constant both among CUs and among years.  When projecting CUs forward, we maintained this assumption in our base case by generating a single smolt-to-adult survival rate for each sea entry year and setting $\sigma_{\gamma}$ = 0, where $\sigma_{\gamma}$ is the standard deviation of among-CU variability in $\gamma$ such that $\gamma_i \sim Normal(\bar{\gamma}, \sigma_{\gamma})$. We used sensitivity analyses on $\sigma_{\gamma}$ to test the effect of changes in spawner abundance covariation among CUs on projected LRP estimates. Three alternative levels of $\sigma_{\gamma}$ were used in sensitivity analyses: $\sigma_{\gamma}$ = 0.045, 0.0675, and 0.09. We selected these levels to cover a range between 0 and 0.09, where 0.09 was the standard deviation of the estimated marginal posterior distribution for $\gamma$ from our Ricker stock recruitment model fit. 
 
 The resulting correlations in spawner abundances from the projections are shown in Figure \@ref(fig:coho-sigGammaCorrelation). In the forward projections, pairwise correlations in projected spawner abundances among CUs for the base case assumption of $\sigma_{\gamma}$ = 0 were similar to observed pairwise correlations in spawner abundances among CUs. Increasing $\sigma_{\gamma}$ resulted in decreased among-CU correlation in projected spawner abundances.  
 
-```{r coho-sigGammaCorrelation, fig.cap="Distribution of correlations of spawner abundances among CUs for observed data between 1998 and 2021 and projected time-series under alternative assumptions about the standard deviation on the marine survival co-efficient among CUs for the base Ricker model formulation.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-sigGammaCorrelation, fig.cap="Distribution of correlations of spawner abundances among CUs for observed data between 1998 and 2021 and projected time-series under alternative assumptions about the standard deviation on the smolt-to-adult survival co-efficient among CUs for the base Ricker model formulation.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-corrEffect-sigGamma.png")
 ```
 
 \linebreak
 
-***Variability in age proportions of recruits among CUs***
+***Variability in age proportions of recruitments among CUs***
 
-Annual variability in the age structure of returns was generated from a multivariate logistic distribution parameterized using CU-specific time series of proportions at age. The underlying average age structure for each CU was set at the average from the available time series (brood years 1998 - 2016), while annual deviations from underlying age-specific means were drawn from a multivariate logistic distribution. Annual deviations were held constant among all CUs; however, the scale of annual deviations was controlled by the variability parameter $\tau$, which was estimated individually for each CU. This meant that while all CUs simultaneously experienced increases or decreases in a given year, the magnitude of the increase or decrease was CU-specific. Annual deviations were held constant among CUs to represent the strong co-variation<!--LW: elsewhere this is covariation--> in proportions at age seen in available time series for Interior Fraser Coho, especially since 2010 (Figure \@ref(fig:coho-recruitResid-Ricker)). When the constraint of constant annual deviations was removed, generated proportion at age data was much more variable than observed data, which was considered to be unrealistic. 
+Annual variability in the age structure of returns was generated from a multivariate logistic distribution parameterized using CU-specific time series of proportions at age. The underlying average age structure for each CU was set at the average from the available time series (brood years 1998 - 2016), while annual deviations from underlying age-specific means were drawn from a multivariate logistic distribution. Annual deviations were held constant among all CUs; however, the scale of annual deviations was controlled by the variability parameter $\tau$, which was estimated individually for each CU. This meant that while all CUs simultaneously experienced increases or decreases in a given year, the magnitude of the increase or decrease was CU-specific. Annual deviations were held constant among CUs to represent the strong covariation in proportions at age seen in available time series for Interior Fraser Coho, especially since 2010 (Figure \@ref(fig:coho-recruitResid-Ricker)). When the constraint of constant annual deviations was removed, generated proportion at age data was much more variable than observed data, which was considered to be unrealistic. 
 
-Annual variability in the age structure of recruits has not been included in other recent projection analyses for this SMU. Both @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 assumed a constant age structure over time.  
+Annual variability in the age structure of recruitments has not been included in other recent projection analyses for this SMU. Both @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020 assumed a constant age structure over time.  
 
-```{r coho-ageProp, fig.cap="Proportion of recruits returning at age 3 for 1998 - 2016 brood years. Only two age classes (age 3 and age 4) are present in the age structure, so the proportion of recruits returning at age 4 will account for the remainder of returns in each year.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
+```{r coho-ageProp, fig.cap="Proportion of recruits returning at age 3 for 1998 - 2016 brood years. Only two age classes (age 3 and age 4) are present in the age structure, so the proportion of recruits returning at age 4 will account for the remainder of returns from each brood year.", warning=FALSE, echo=FALSE, out.width = '50%',  fig.align="center"}
 knitr::include_graphics("figure/coho-ObsAgeProp-byCU.png")
 ```
 
@@ -426,9 +426,9 @@ knitr::include_graphics("figure/coho-ObsAgeProp-byCU.png")
 
 ***Covariance in exploitation***
 
-We assumed an average exploitation rate of 12.5% for all CUs in forward projections based on average historical values, with common interannual variability in exploitation rates due to shared fishery impacts among CUs each year. Interannual variability in exploitation rates was assumed to be beta distributed (constrained between 0 and 1), with the standard deviation of the beta distribution parameterized from estimated exploitation rates for 1998 - 2016 brood years. The corresponding coefficient of variation (CV) for interannual variability was 0.44.
+We assumed an average exploitation rate of 12.5% for all CUs in forward projections based on recent average values, with common interannual variability in exploitation rates due to shared fishery impacts among CUs each year. Interannual variability in exploitation rates was assumed to be beta distributed (constrained between 0 and 1), with the standard deviation of the beta distribution parameterized from estimated exploitation rates for 1998 - 2016 brood years. The corresponding coefficient of variation (CV) for interannual variability was 0.44.
 
-Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator stocks (1-2 CUs with indicators / year) and variation in which indicator stocks were operational in a given year. As a result, empirically-based estimates of among-CU variability in exploitation rates are not available. However, there are reasons to expect exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (CV=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between CV = 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
+Exploitation rates for Interior Fraser Coho are only available at the SMU-level due to limited coded-wire indicator stocks (1-2 CUs with indicators / year) that have been available for the Fishery Regulation Assessment Model used by the Pacific Salmon Commission for Coho Salmon [@pacificsalmoncommissionJointCohoTechnical2013]. As a result, empirically-based estimates of among-CU variability in exploitation rates are not available. However, there are reasons to expect exploitation rates to vary among CUs in a given year, including differences in freshwater fisheries.  We assumed that CU-specific variability in exploitation rates was half the common (SMU-level) interannual variability (CV=0.22), and varied this in sensitivity analyses from 0 and 0.44 to cover plausible bounds. Varying assumptions about variability in exploitation among CUs between CV = 0 and 0.44 in forward projections did not impact the distribution of correlations in spawner abundances in the projections (results not shown).  
 
 
 <!--BC Comment:
@@ -445,11 +445,11 @@ Parameter & Value & Source \\
  Ricker Parameters ($\alpha$, $\beta$, $\gamma$,$\sigma$)  &  CU-specific (Appendix C) & Drawn from joint posterior from MCMC model fit to 1998-2016 brood years
 \\\\
 
-Smolt-to-adult marine survival rate (all CUs) & Drawn from Lognormal(-4.83, 1.21), bound between [-9.21, -3.32]
- & Estimated from annual marine survival rate estimates from brood years 1998 - 2016, with bounds set at lowest and highest observations
+Smolt-to-adult survival rate (all CUs) & Drawn from Lognormal(-4.83, 1.21), bound between [-9.21, -3.32]
+ & Estimated from annual survival rate estimates from brood years 1998 - 2016, with bounds set at lowest and highest observations
 \\\\  
 
- Among-CU variability in marine survival coefficient $\gamma$  &  $\sigma_{\gamma}$ = 0 (all CUs the same) & Assumed value when fitting models. Varied between 0 and 0.09 in sensitivity analyses
+ Among-CU variability in smolt-to-adult survival coefficient $\gamma$  &  $\sigma_{\gamma}$ = 0 (all CUs the same) & Assumed value when fitting models. Varied between 0 and 0.09 in sensitivity analyses
 \\\\
 
  Ave age proportions at maturity (ages 3, 4) &  MiddleFR, LThomp, SThomp = (0.86,0.14) , FRCanyon = (0.87, 0.13), NThomp = (0.88, 0.12) & Estimated from time-series of proportions of recruits at age
