--- a/caseStudyWP/appendix-samSim.Rmd
+++ b/caseStudyWP/appendix-samSim.Rmd
@@ -185,7 +185,7 @@ if y>6:
   (\#eq:RY)
 \end{align}
 
- The computation of brood year recruitment follows the recruitment curve of choice. For the LRP version of `samSim`, three options for the recruitment curve are available: a simple Ricker curve (equation \@ref(eq:Rickersimple) when $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with a smolt-to-adult marine survival covariate (Equations \@ref(eq:Rickersurv) and \@ref(eq:Rickersurvsum), also described in Chapter \@ref(IFCChapter)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve. Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (Equation \@ref(eq:CUautocorr)). 
+ The computation of brood year recruitment follows the recruitment curve of choice. For the LRP version of `samSim`, three options for the recruitment curve are available: a simple Ricker curve (equation \@ref(eq:Rickersimple) when $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with a smolt-to-adult survival covariate (Equations \@ref(eq:Rickersurv) and \@ref(eq:Rickersurvsum), also described in Chapter \@ref(IFCChapter)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve. Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (Equation \@ref(eq:CUautocorr)). 
 
 \begin{equation}
   R_{y,i} = S_{y,i} \cdot e^{\alpha{i} - \beta{i} \cdot S_{y,i} + w_{y,i} - \frac{\sigma_{i}^{2}}{2}}
@@ -217,7 +217,7 @@ if y>6:
 \end{equation}
 
 
-For the Ricker model with the marine survival covariate, the covariates for each calendar year are generated following a normal distribution with user defined mean and variance (Equation \@ref(eq:survCY)). The distribution of survival covariates is truncated between maximum and minimum values provided in the input files. The brood year survival covariates, $Surv_{y,j}$, are currently populated following the dominant life history types from Interior Fraser Coho. For that stock, fish with a 3-year life cycle differ from those with a 4-year life cycle in the number of years spent in freshwater as juveniles, i.e., 18 months vs 30 months; both life cycles spend 18 months at sea before returning to spawn. Fish with a 2-year life cycle spend 18 months in the freshwater environment and only 6 months at sea before returning as jacks. This life history results in the survival covariate being lagged by one year for ages 2 and 3 Equation \@ref(eq:surv)). The exception is the first two years of the priming loop, when no lag is applied to the covariates.
+For the Ricker model with the smolt-to-adult survival covariate, the covariates for each calendar year are generated following a normal distribution with user defined mean and variance (Equation \@ref(eq:survCY)). The distribution of survival covariates is truncated between maximum and minimum values provided in the input files. The brood year survival covariates, $Surv_{y,j}$, are currently populated following the dominant life history types from Interior Fraser Coho. For that stock, fish with a 3-year life cycle differ from those with a 4-year life cycle in the number of years spent in freshwater as juveniles, i.e., 18 months vs 30 months; both life cycles spend 18 months at sea before returning to spawn. Fish with a 2-year life cycle spend 18 months in the freshwater environment and only 6 months at sea before returning as jacks. This life history results in the survival covariate being lagged by one year for ages 2 and 3 Equation \@ref(eq:surv)). The exception is the first two years of the priming loop, when no lag is applied to the covariates.
  
 \begin{equation}
 sv_{y,j} = 
@@ -252,7 +252,7 @@ Recruitment numbers produced with either formulation of the Ricker model are cap
 \end{equation}
 
 <!--CH addition below-->
-Although in our implementation of `samSim` for Interior Fraser Coho with marine survival covariate, data were used to prime the model, equations for simulating dynamics during this period are provided here for completeness. The equations for simulating population dynamics are also used in the projection phase of the model (see below).
+Although in our implementation of `samSim` for Interior Fraser Coho with smolt-to-adult survival covariate, data were used to prime the model, equations for simulating dynamics during this period are provided here for completeness. The equations for simulating population dynamics are also used in the projection phase of the model (see below).
 
 ### Compute management quantities and benchmarks
 
@@ -537,7 +537,7 @@ The management quantities, i.e., $Sgen$ and $Smsy$ or Spawners quantiles, can th
 ### Project population dynamics
 
 
-In this section the brood year recruitment for the current projection year is computed. The first step is to generate the marine survival estimates which are used to project recruitment when the Ricker model with survival covariates is applied. The survival covariates are generated using the method described in Section \@ref(recruitment-data-are-not-available) and Equations \@ref(eq:survCY) and \@ref(eq:surv). Marine survival covariates are considered to be constant across CUs.
+In this section the brood year recruitment for the current projection year is computed. The first step is to generate the smolt-to-adult survival estimates which are used to project recruitment when the Ricker model with survival covariates is applied. The survival covariates are generated using the method described in Section \@ref(recruitment-data-are-not-available) and Equations \@ref(eq:survCY) and \@ref(eq:surv). Smolt-to-adult survival covariates are considered to be constant across CUs.
 
 The following step is to compute the age structure of the returns with random error, which follows the same procedure described in Section \@ref(recruitment-data-are-not-available). The age structure follows a distribution with mean age structure and standard deviation for each CU given in the input files.
 
