Edits to case study paper

--- a/caseStudyWP/02-chap2.Rmd
+++ b/caseStudyWP/02-chap2.Rmd
@@ -30,14 +30,14 @@ Also - I have not yet reponded to this comment from Chuck:
 
 -->
 
-We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5. Spawning streams with PNI estimated or assumed to be < 0.5 were excluded from analyses.
+We also maintain consistency with the WSP by only including spawning streams without significant enhancement when evaluating CU and SMU status. We use the Proportionate Natural Influence metric, PNI,as a basis for defining 'significant enhancement'. PNI is a metric of the genetic risk of hatcheries on natural populations, with values < 0.5 indicating integrated-hatchery populations, where most fish are hatchery origin [@withlerGeneticallyBasedTargets2018]. We defined 'significant enhancement' as PNI values < 0.5. Spawning streams with PNI estimated or assumed to be < 0.5 were excluded from case study analyses.
 
 Systems with levels of PNI > 0.5 can have hatchery influences; however, dynamics are predominately natural origin. PNI values $\geqslant$ 0.5 and < 0.72 indicate integrated-transition populations where natural-origin fish predominate, and values $\geqslant$ 0.72 indicate integrated-wild populations, where most fish are considered 'wild' under the WSP with parents who were born in the natural environment [@dfoCanadaPolicyConservation2005; @withlerGeneticallyBasedTargets2018]. Fully wild populations are those that not have hatchery programs, and for which strays from out-of-basin hatchery production are limited to <3% per year [@withlerGeneticallyBasedTargets2018]. Where time-series of the proportion of hatchery marked fish on the spawning grounds are available (e.g., Interior Fraser Coho case study), these proportions are used to inform assessments in two ways: first to develop time-series of natural-origin recruitment for benchmark estimation based on stock-recruitment relationships and second to develop time series of natural-origin spawners for status assessment against benchmarks.  
 
 
 ## PROPORTION-BASED LRPS
 
-A proportion-based LRP is simply the proportion of CUs in the SMU required to be assessed as being above Red status. In all three case studies, we set an LRP requiring 100% of CUs to be above Red status. In this case, the LRP acts as a trigger that is breached when one of more CUs is assessed as having Red status. Rationale for the choice of 100% of CUs required to be above Red status in order for an SMU to be considered above its LRP is described in Holt et al. (in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
+A proportion-based LRP is simply a requirement for a specified proportion of CUs to be assessed as above Red status. In all three case studies, we set an LRP requiring 100% of CUs to be above Red status. In this case, the LRP acts as a trigger that is breached when one or more CUs in an SMU is assessed as having Red status. Rationale for the choice of 100% of CUs required to be above Red status in order for an SMU to be considered above its LRP is described in Holt et al. (in review)<!--KH: footnote already cited; subscript needs to be added at a later point-->.
 
 We compare three different methods of assessing CU status when using proportion-based LRPs: (i) the proportion of CUs with a recent WSP status assessment above the Red zone (e.g., @grant2017FraserSockeye2020), (ii) the proportion of CUs with a recent Salmon Scanner status assessment above Red (see below for more details), and (iii) the proportion of CUs with status estimated to be below a single type of CU lower benchmark (e.g., S\textsubscript{gen}, percentile-based benchmarks, etc.). While we recommend applying methods (i) or (ii), approach (iii) is shown for comparison purposes to demonstrate consistency between Salmon Scanner status assessments and statuses derived from abundances relative to lower benchmarks.
 
@@ -46,7 +46,7 @@ When assessing CU status relative to a single abundance-based lower benchmark in
 
 ### PACIFIC SALMON STATUS SCANNER {#rapidToolMethods}
 
-One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms. We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal et al., in prep)<!--KH: footnote already cited; subscript needs to be added at a later point-->. The Salmon  Scanner is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on a more regular basis than the time-intensive WSP assessment approach allows. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses to create algorithms and decision trees that approximate the status of the integrated assessments.  Data inputs and outcomes from previous WSP assessment processes were used in the CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorithm was verified with data and local expertise on assessed status for Fraser River Chum and Pink Salmon (Pestal et al. in prep ). <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the scanning tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). As with other methods, an expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. In practice, results from Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.). 
+One of the methods we consider to estimate CU status for proportion-based LRPs relies on a method of rapidly assessing CU status using multidimensional algorithms. We implement this approach using the Salmon Scanner that has recently been developed by DFO's State of the Salmon Program (Pestal et al., in prep)<!--KH: footnote already cited; subscript needs to be added at a later point-->. The Salmon  Scanner is intended to support implementation of Canada's WSP by approximating the outcomes of full WSP Integrated Status Assessments on a more regular basis than the time-intensive WSP assessment approach allows. The Salmon Scanner was developed using Classification and Regression Tree (CART) analyses to create algorithms and decision trees that approximate the status of the integrated assessments.  Data inputs and outcomes from previous WSP assessment processes were used in the CART analyses: Fraser River sockeye, Interior Fraser coho, and Southern BC Chinook [@dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016; @dfo2017FraserSockeye2018;  @grant2017FraserSockeye2020]. The algorithm was verified with data and local expertise on assessed status for Fraser River Chum and Pink Salmon (Pestal et al. in prep ). <!--CH comment: may need to change the pestal citation to S. Grant, pers comm.  I'm not sure how much the Pink and Chum work will be captured in the report?-->. Briefly, the Salmon Scanner tool uses a decision tree to estimate CU status based on data type, quality, abundance, and trends (e.g., Figure \@ref(fig:decision-tree)). As with other methods, an expert review of rapid status results for each CU is intended to be incorporated into application of this tool (S. Grant, pers. comm.). When using this method in the case study, we took the outputs of the algorithms at face value and did not confirm them based on expert opinion. In practice, results from the Salmon Scanner will be validated against local expertise when implemented annually (S. Grant, pers. comm.). 
 
 <!-- 
 LW: Do we want to say anything about how the decision tree we used could also be updated? 
