--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -48,7 +48,7 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 
 Hatchery enhancement has occurred, and continues to occur in some parts of the Interior Fraser Coho SMU. Two CUs are currently considered wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., do not have hatchery programs; strays from out-of-basin hatchery production are limited to <3% per year), while the other three are considered integrated-wild populations (i.e., with Proportionate Natural Influence (PNI) values most likely $\geq$ 0.72; M. Arbeider, pers. comm.). Within integrated-wild populations, most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement between 1998 and 2005, so would likely have been considered an integrated-transition population (0.5 $\leq$ PNI < 0.72) during this period.
 
-The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in prep) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. These criteria include similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. A summary of our consideration of these four criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix)). Our results from this evaluation indicated that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
+The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUS of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. These criteria include similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. A summary of our consideration of these four criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix)). Our results from this evaluation indicated that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
 Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stock Provisions of the revised Fisheries Act, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
@@ -606,7 +606,9 @@ Retrospective analyses of logistic regression-based LRP options showed that LRPs
 Missing data scenarios, in which 1 or 2 CUs were removed from the data set, further highlighted limitations in the ability of the logistic regression models to converge on a solution given small changes in the pattern of 'successes' and 'failures'. In addition, we found that removing CUs in logistic regression-based LRPs resulted in an increase in uncertainty of estimated status.  However, despite these limitations, the 95% confidence intervals for the missing data scenarios usually overlapped with status based on all CUs being included. This result suggest that our assumption of CU representativeness for stock status within the Interior Fraser Coho SMU may be supported. Future work on this SMU (or, other SMUs wishing to apply these methods) could use retrospective analyses of proportion-based approaches to see if status estimates remain stable when 1 or 2 CUs are removed from the data set.  The extent to which this result can be applied to other SMUs is expected to be dependent on the level of covariation in CU status among CUs within an SMU.
 
 
-<!-- We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, we consider the application of these criteria to evaluate how decisions about whether CU status can be inferred from other CUs based on these criteria differ from the results of sensitivity analyses presented in the main paper.  As part of these sensitivity analyses, we explored how removing one or two CUs affected LRP estimation and status assessments against the LRP.
+<!-- Need to adress this from intro:
+
+We considered the 4 criteria identified in Holt et al. (in prep) to evaluate if status of any one CU within this SMU could be inferred from the remaining CUs; these criteria included similarity in (i) threats, (ii) environmental conditions and drivers, (iii) life history and (iv) population capacity. Although statuses are available for all CUs in this SMU, we consider the application of these criteria to evaluate how decisions about whether CU status can be inferred from other CUs based on these criteria differ from the results of sensitivity analyses presented in the main paper.  As part of these sensitivity analyses, we explored how removing one or two CUs affected LRP estimation and status assessments against the LRP.
 -->
 
 Taken together, these retrospective results highlight that caution should be used when applying logistic regression-based LRPs. While they did provide similar estimates of SMU status as proportion-based methods for several (but not all) years in the historical comparison, they were sensitive to reductions in data availability. For the specific case of Interior Fraser Coho, retrospective performance may improve in the future as more data become available to improve the statistical power of logistic regression fits.
