--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -77,7 +77,7 @@ When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as b
 Percentile-based benchmarks can be applied to assess status of CUs when other data - like benchmarks based on productivity or habitat - are not available or reliable [@holtEvaluatingBenchmarksBiological2018; @clarkEvaluationPercentileApproach2014]. The suitability of percentile benchmarks was evaluated for ISC Chum by @holtEvaluatingBenchmarksBiological2018, who tested how well percentile benchmarks matched benchmarks from stock-recruit parameters, using retrospective and simulation analyses. @holtEvaluatingBenchmarksBiological2018 also calculated benchmarks based on stock-recruit model parameters for ISC Chum stocks, but did not recommend them due to uncertainty in spawner and recruit data. They tested how well a 25% percentile benchmark (and higher values up to 50%) compared to estimates of S\textsubscript{gen} for these CUs. They found that percentile benchmarks (from 25-50%) under moderate to high harvest rates and low to moderate productivity tended to underestimate 'true' S\textsubscript{gen} values (estimated from the same data), which would lead to optimistic and incorrect status assessments. More work on alternatives to percentile benchmarks were needed in this case.
 
 
-For this case study, percentile benchmarks were calculated using the infilled time series of annual escapement (i.e., not smoothed using a generational geometric mean). In contrast, status for year $i$ was determined by comparing the generational mean (geometric mean on a 4 year window, ending with year $i$) with the benchmark. This approach of using raw (unsmoothed) escapements when calculating benchmarks, and generational smoothed escapements when estimating CU status relative to benchmarks, is consistent with the approaches taken for our other two case studies, as well as with the recommendations in Holt et al. (in prep).  
+For this case study, percentile benchmarks were calculated using the infilled time series of annual escapement (i.e., not smoothed using a generational geometric mean). In contrast, status for year $i$ was determined by comparing the generational mean (geometric mean on a 4 year window, ending with year $i$) with the benchmark. This approach of using raw (unsmoothed) escapements when calculating benchmarks, and generational smoothed escapements when estimating CU status relative to benchmarks, is consistent with the approaches taken for our other two case studies, as well as with the recommendations in Holt et al. (in review).  
 
 
 \renewcommand*{\arraystretch}{1.5}
