--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -3,11 +3,11 @@
 
 ## CU-LEVEL BENCHMARKS AND ASSESSMENTS
 
-LRPs described in this working paper rely on CU-level benchmarks and assessments (or, in the case of WCVI Chinook, inlet-level benchmarks and assessments), for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate abundance-based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of multidimensional assessments within the Pacific Salmon Status Scanner to Inside Southcoast Chum. 
+LRPs described in this working paper rely on CU-level or inlet-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate abundance-based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of multidimensional assessments within the Pacific Salmon Status Scanner to Inside Southcoast Chum (excluding Fraser). 
 
-At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Pacific Salmon Status Scanner. These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho case study for one CU in three years. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Salmon Scanner. These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho case study for one CU in three years. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
 
-In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs that differ in threats, environmental conditions, life-history characteristics or population capacities, where data deficient CUs cannot be represented by proxy. For example, for Inside South Coast Chum, we found that status relative to LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status.
+In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs that differ in threats, environmental conditions, life-history characteristics or population capacities, where data deficient CUs cannot be represented by proxy. For example, for Inside South Coast Chum, we found that status relative to the LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status.
 
 ## PROPORTION-BASED LRPS
 
