--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -13,7 +13,7 @@ Following @withlerGeneticallyBasedTargets2018, we recommend including only popul
 
 @withlerGeneticallyBasedTargets2018 recommend the inclusion of integrated-wild for biological assessments under the WSP, and provisionally, integrated-transition populations (i.e., PNI  $\geqslant$ 0.5 ). Similarly, only populations with PNI values $\geqslant$ 0.5 were included in the assessment of CU and SMU status here. Stricter definitions of hatchery enhancement can be considered by including only populations with PNI values $\geqslant$ 0.72. In practice, applying this stricter threshold for our case study on Chinook Salmon resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which tend to be populations with hatcheries. Adopting a threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, was the result of a trade-off between assessing remaining CU-level biodiversity and excluding significant hatchery impacts. For some populations, early periods of high enhancement can be removed from time-series and assessments can focus on recent periods without significant enhancement [@grantEvaluationUncertaintyFraser2011]. Here we used thermal marks be used to identify the proportion of hatchery-origin spawners on the spawning grounds to derive PNI values. When data on thermal marking were not available, coded-wire tags (CWTs) were used to identify hatchery-origin spawners, but were associated with increased uncertainty in the proportion of hatchery-origin spawners.
 
-Large interannual variability in PNI values can result from natural variability in survival of hatchery vs. natural-origin spawners, low sampling rates for hatchery-origin spawners, use of coded wire-tags instead of thermal marks, and high observation errors requiring decisions about temporal averaging.  Here we average over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation vs entire time period). In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives.<!--CH: this last sentence is in response to Chuck's Q as to if Withler recommend actions given a PNI value, or recommend management populations to a PNI value(goal). It's both. PNI goals are supposed to be developed for all pops. But for WSP assessments, hatchery-dominated pops are removed from analyses [focus of this section]-->Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO In review)^[DFO In review. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC].
+Large interannual variability in PNI values can result from natural variability in survival of hatchery vs. natural-origin spawners, low sampling rates for hatchery-origin spawners, use of coded wire-tags instead of thermal marks, and high observation errors requiring decisions about temporal averaging.  Here we average over the available time series where hatchery objectives have remained constant, though recommend further research quantifying the sources of uncertainties and evaluating the sensitivity of results to various time periods for averaging (e.g., recent generation vs entire time period). In addition to guidance on biological assessments under the WSP, @withlerGeneticallyBasedTargets2018 further recommend developing biological goals for hatchery-influenced populations documenting trade-offs between increased genetic risk to wild populations from hatchery production and increased abundance required to support other objectives.<!--CH: this last sentence is in response to Chuck's Q as to if Withler recommend actions given a PNI value, or recommend management populations to a PNI value(goal). It's both. PNI goals are supposed to be developed for all pops. But for WSP assessments, hatchery-dominated pops are removed from analyses [focus of this section]-->Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO In revision)^[DFO In revision. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC].
 
 
 
@@ -35,7 +35,7 @@ In addition, @withlerGeneticallyBasedTargets2018 recommend that wild populations
 ## ESTIMATION OF CU STATUS {#cu-est-methods}
 
 
-To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009, we recommend that CU-level status consider multiple metrics, either integrated through formal status assessments [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016] or through the Pacific Salmon Status Scanner (Pestal et al. In prep.). By using multiple metrics (Table \@ref(tab:SSmetrics)), the Salmon Scanner allows for the assessment of status across a wide range of data availabilities. When data for a single metric are not available other metrics can be used to inform status. Therefore, the Salmon Scanner can provide provisional assessments under data limitations, and methods to account for resulting uncertainties from data limitations are currently being integrated into the Scanner.  
+To be consistent with the multidimensional approach to WSP status assessments described in @holtIndicatorsStatusBenchmarks2009, we recommend that CU-level status consider multiple metrics, either integrated through formal status assessments [@grantIntegratedBiologicalStatus2013; @grant2017FraserSockeye2020; @dfoWildSalmonPolicy2015; @dfoIntegratedBiologicalStatus2016] or through the Pacific Salmon Status Scanner (Pestal et al. In prep.). By using multiple metrics (Table \@ref(tab:SSmetrics)), the Salmon Scanner allows for the assessment of status across a wide range of data availabilities. When data for a single metric are not available other metrics can be used to inform status. Therefore, the Salmon Scanner can provide assessments under data limitations, and methods to account for resulting uncertainties from data limitations are currently being integrated into the Scanner.  
 
 \renewcommand*{\arraystretch}{1.4}
 \begin{table}[!htbp]
@@ -64,7 +64,7 @@ Various benchmarks on spawner abundances have been identified to account for dif
 
 Similarly, benchmarks on long-term and short-term trends in spawner abundances have been identified. Long-term trends are measured by the ratio of recent generational geometric average spawner abundances relative to the long-term geometric average, and short-term trends are measured as the percent change in spawner abundances over 3 generations, the time period used in COSEWIC assessments [@holtEvaluationBenchmarksConservation2009].
 
-In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@ifcrtConservationStrategyCoho2006].
+In addition, metrics on the distribution of spawning within a CU can be considered in WSP assessments [@peacockReviewMetricsDistribution2010a; @peacockMetricsSamplingDesigns2012; @dfoIntegratedBiologicalStatus2016], but may not be required for all salmon species. In one example, the distribution of spawners across spawning sites and contractions in that distribution over time were considered in a WSP assessment for southern BC Chinook [@dfoIntegratedBiologicalStatus2016]. In addition, recovery targets for Interior Fraser Coho account for the distribution of spawners among sub-populations  [@ifcrtConservationStrategyCoho2006].
 
 For the purposes of LRP development, CU status were derived from both the Pacific Salmon Status Scanner and individual metrics on spawner abundances to demonstrate the consistency in these approaches. However, when only a single metric is applied to derive status, there is a risk of providing a misleading assessment if other metrics that would have also been used in a multidimensional assessment diverge in status from the single abundance-based metric, but are not considered. A full review of the Salmon Scanner will be provided in Pestal et al. (In prep.).
 
